--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,8 @@
 	<body>
 		<div class="vh-100 w-100 flex justify-center">
 			<div class="flex flex-column items-center justify-center">
-				<h2 class="fw4 blue">Lab44</h2>
-				<p class="silver ma0">Datsyshyn Roman | KN-405</p>
-				<div class="pt5">
-					<span id="env" class="white pv1 ph2 br-pill bg-light-blue"></span>
-				</div>
+				<h2 class="fw4 blue">Lab4</h2>
+				<p class="silver ma0">Pasichnyk Vasyl</p>
 			</div>
 		</div>
 
