--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 		<div class="vh-100 w-100 flex justify-center">
 			<div class="flex flex-column items-center justify-center">
 				<h2 class="fw4 blue">Lab4</h2>
-				<p class="silver ma0">Pasichnyk Vasyl</p>
+				<p class="silver ma0">Pasichnyk Vasyl KN-405</p>
 			</div>
 		</div>
 
